# Tucil2_13521093_13521129

./: .gitignore  CMakeLists.txt  README.md  app.py  read.py  tesaja.py  tester.py
doc/: dummy.txt
fails/: 1.txt  2.txt  3.txt  4.txt
log/: log.md
src/: __init__.py  bfsolver.cpp  bfsolver.h  brute_force.py  datatypes.h  divide_conquer.py  dncsolver.cpp  dncsolver.h  euclidean.cpp  euclidean.h  generator.cpp  generator.h  generator.py  io.cpp  io.h  main.cpp  sorter.cpp  sorter.h  visualizer.cpp  visualizer.h  visualizer.py
